Name:                options
Version:             0.0
Author:              anatoly yakovenko
Build-Type:          Simple
Cabal-Version:       >=1.2

Executable options
  Main-is:           Options.hs
  ghc-options:       -Wall -Werror -rtsopts -threaded -main-is Options.main
  Build-Depends:     base, 
                     split,
                     time,
                     array,
                     bytestring
