Name:                options
Version:             0.0
Author:              anatoly yakovenko
Build-Type:          Simple
Cabal-Version:       >=1.2
-- -Werror 
Executable options
  Main-is:           Options.hs
  ghc-options:       -Wall -rtsopts -threaded -main-is Options.main 
  Build-Depends:     base, 
                     split,
                     time,
                     array,
                     bytestring
