Name:                yfo
Version:             0.0
Author:              anatoly yakovenko
Build-Type:          Simple
Cabal-Version:       >=1.2

Executable yfo
  Main-is:           YFO.hs
  ghc-options:       -Wall -Werror -rtsopts -threaded -main-is YFO.main
  Build-Depends:     base, 
                     aeson,
                     bytestring
